[gd_scene load_steps=7 format=3 uid="uid://c77xp245t26vp"]

[ext_resource type="Script" uid="uid://kyx7f8i6cepf" path="res://scripts/ui/StartScreen.gd" id="1_w26h4"]
[ext_resource type="Texture2D" uid="uid://ce201kx6kh82p" path="res://assets/habitat-transition/06 Forest.png" id="2_lq8pi"]
[ext_resource type="Texture2D" uid="uid://t80hhfyjiq36" path="res://assets/texts/TRIASSIC-EVOLUTION-1-17-2026.png" id="3_1wlrw"]
[ext_resource type="FontFile" uid="uid://bwwxs05nocmm8" path="res://assets/fonts/PressStart2P-Regular.ttf" id="4_nwhq5"]
[ext_resource type="PackedScene" uid="uid://c0ss5gbri434f" path="res://scenes/ui/AuthPanel.tscn" id="5_84hrd"]
[ext_resource type="PackedScene" uid="uid://b8io3jmork557" path="res://scenes/ui/SettingsPanel.tscn" id="6_lq8pi"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w26h4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lq8pi")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -89.0
offset_right = 512.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_1wlrw")

[node name="LblPrompt" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_nwhq5")
theme_override_font_sizes/font_size = 20
text = "- Press Anywhere to Start -"
horizontal_alignment = 1

[node name="AuthPanel" parent="." instance=ExtResource("5_84hrd")]
visible = false
layout_mode = 1

[node name="BtnSettings" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
text = " + "

[node name="SettingsPanel" parent="." instance=ExtResource("6_lq8pi")]
visible = false
layout_mode = 0
anchors_preset = 0
